--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,10 +7,10 @@
         <!-- Make site responsive on mobile/tablet -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- <link rel="stylesheet" href=""> -->
-
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
         <!-- Bootstrap CSS -->
         <!-- Latest compiled and minified CSS -->
-        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
         <!-- CSS only -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
@@ -18,6 +18,8 @@
         <script src="https://kit.fontawesome.com/aeb6f6bd41.js" crossorigin="anonymous"></script>
         <!-- Style sheet-->
         <link rel="stylesheet" href="/stylesheets/main.css">
+        <!-- Star rating -->
+        <link rel="stylesheet" href="/stylesheets/5star.css">
     </head>
     <body>
 
